# SelfExtensionAgent

./: README.md  config.yml  main.py  pyproject.toml
src/: agent.py  prompts.py  schemas.py  structured_outputs.py  utils.py
src/skills/: registry.json
src/skills/file_operations/: file_operations.md  file_operations.py  prompt.md
src/skills/file_organizer/: file_organizer.md  file_organizer.py  prompt.md
src/skills/link_parser/: link_parser.md  link_parser.py  prompt.md
src/skills/text_file_processor/: prompt.md  text_file_processor.md  text_file_processor.py
src/skills/uv_package_manager/: prompt.md  uv_package_manager.md  uv_package_manager.py
src/skills/weather_check/: prompt.md  weather_check.md  weather_check.py
src/skills/web_search_pro/: prompt.md  web_search_pro.md  web_search_pro.py
src/tools/: __init__.py  skill_creation.py
