[project]
name = "self-extension-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "omegaconf>=2.3.0",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "yml>=0.0.1",
]
